# lab-5-7-senioritas

./: CMakeLists.txt
src/documents_core/: CMakeLists.txt
src/documents_core/include/lab5/documents/: Document.hpp  DocumentBuilder.hpp  InvertedIndex.hpp  SearchServer.hpp
src/documents_core/src/: Document.cpp  DocumentBuilder.cpp  InvertedIndex.cpp
tests/: CMakeLists.txt  tests.cpp
